crates/plotnik-tests/tests/02-parser/recovery_unexpected/garbage_inside_alternation.txt
Q = [(a) ^^^ (b)]
------------------ DIAGNOSTICS -------------------
error: expected an alternative, or `]` to close
 --> query.ptk:1:10
  |
1 | Q = [(a) ^^^ (b)]
  |          ^^^
